infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
    name: ingress-srv
    annotations:
        kubernetes.io/ingres.class: nginx
        nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
    rules:
        - host: posts.com
          http:
            paths:000
              - path: /posts/create
                backend:
                    serviceName: posts-cluster-serv
                    servicePort: 4000
              - path: /posts
                backend:
                    serviceName: query-cluster-serv
                    servicePort: 4002
              - path: /posts/?(.*)/comments
                backend:
                    serviceName: comments-cluster-serv
                    servicePort: 4001
              - path: /?(.*)
                backend:
                    serviceName: client-cluster-serv
                    servicePort: 3000
